--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,11 @@ button {
 }
 
 /*Службові теги*/
+/* забрав */
 .accent {
   color: var(--color-accent);
 }
+
 .link-inherit {
   color: inherit;
 }
@@ -98,6 +100,7 @@ button {
 }
 
 /* Загальні класи */
+/* забрав */
 body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
@@ -107,17 +110,18 @@ body {
   background-color: var(--color-white);
 }
 
+/* забрав */
 .logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: calc(31 / 26);
 }
-
+/* забрав */
 .hover-accent {
   transition: color 250ms var(--basic-cubic);
 }
-
+/* забрав */
 .hover-accent:hover,
 .hover-accent:focus {
   color: var(--color-accent);
@@ -131,7 +135,11 @@ body {
   text-align: center;
   color: var(--color-bold);
 }
+.section {
+  padding: 94px 0;
+}
 
+/* забрав */
 .conteiner {
   margin: 0 auto;
   padding: 0 15px;
@@ -139,25 +147,28 @@ body {
 }
 
 /* Header */
-
+/* забрав */
 .header {
   border-bottom: 1px solid #ececec;
 }
+/* забрав */
 .header-flex {
   display: flex;
   align-items: center;
+  justify-content: center;
 }
-.header-navigation-list {
-  display: flex;
-}
-
+/* забрав */
 .header-logo {
   margin-right: 93px;
   padding-top: 24px;
   padding-bottom: 25px;
   color: var(--color-black);
 }
-
+/* забрав */
+.header-navigation-list {
+  display: flex;
+}
+/* забрав */
 .header-navigation-link {
   position: relative;
   display: inline-block;
@@ -169,9 +180,11 @@ body {
   letter-spacing: 0.02em;
   color: var(--color-bold);
 }
+/* забрав */
 .header-navigation-link.active {
   color: var(--color-accent);
 }
+/* забрав */
 .header-navigation-link.active::after {
   content: '';
   position: absolute;
@@ -185,6 +198,7 @@ body {
   background-color: var(--color-accent);
 }
 
+/* забрав */
 .header-navigation-item:not(:last-child),
 .header-contact li:not(:last-child) {
   margin-right: 50px;
@@ -217,9 +231,6 @@ body {
   width: 100%;
 }
 
-.section {
-  padding: 94px 0;
-}
 /* Hero */
 
 .hero {
