--- a/css/main.css
+++ b/css/main.css
@@ -127,4 +127,40 @@ button {
 }
 .navigation__link:hover, .navigation__link:focus {
   color: #2196f3;
+}
+
+.contact-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: auto;
+  line-height: 1.1428571429;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+}
+.contact-header__item:not(:last-child) {
+  margin-right: 50px;
+}
+.contact-header__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-top: 32px;
+  padding-bottom: 32px;
+  color: inherit;
+}
+.contact-header__link:hover, .contact-header__link:focus {
+  color: #2196f3;
+}
+.contact-header__icon {
+  margin-right: 10px;
+  fill: currentColor;
 }/*# sourceMappingURL=main.css.map */
