--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ button {
   color: var(--color-accent);
 }
 
+/* забрав */
 .link-inherit {
   color: inherit;
 }
@@ -203,7 +204,7 @@ body {
 .header-contact li:not(:last-child) {
   margin-right: 50px;
 }
-
+/* забрав */
 .header-contact {
   display: flex;
   margin-left: auto;
@@ -211,12 +212,14 @@ body {
   font-weight: 500;
   letter-spacing: 0.02em;
 }
+/* забрав */
 .header-contact-link {
   display: flex;
   align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
 }
+/* забрав */
 
 .header-contact-email-icon,
 .header-contact-tel-icon {
