Додав hero і benefits

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,3 +5,6 @@
 @import 'main-page/header/header-logo';
 @import 'main-page/header/navigation';
 @import 'main-page/header/header-contact';
+
+@import 'main-page/main/hero/hero';
+@import 'main-page/main/benefits/benefits';
