--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ button {
 
 /* Змінні */
 :root {
+  /* забрав */
   --color-accent: #2196f3;
   --color-bold: #212121;
   --color-main: #757575;
@@ -51,11 +52,13 @@ button {
 
   --color-black: #000000;
   --color-white: #ffffff;
-
+  /* забрав */
   --color-bgr-grey: #f5f4fa;
+
   --color-bgr-lhgt-grey: #f5f5f5;
   --color-bgr-dark: #2f303a;
 
+  /* забрав */
   --basic-cubic: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -69,6 +72,7 @@ button {
 .link-inherit {
   color: inherit;
 }
+/* забрав */
 .visually-hidden {
   position: absolute;
   white-space: nowrap;
@@ -81,13 +85,13 @@ button {
   clip-path: inset(50%);
   margin: -1px;
 }
-
+/* забрав */
 .is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
 }
-
+/* забрав */
 ._btn {
   font-weight: 700;
   font-size: 16px;
@@ -128,6 +132,7 @@ body {
   color: var(--color-accent);
 }
 
+/* забрав */
 .section-title {
   margin-bottom: 50px;
 
@@ -136,6 +141,7 @@ body {
   text-align: center;
   color: var(--color-bold);
 }
+/* забрав */
 .section {
   padding: 94px 0;
 }
@@ -236,6 +242,7 @@ body {
 
 /* Hero */
 
+/* забрав */
 .hero {
   max-width: 1600px;
   padding: 200px 0;
@@ -248,7 +255,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
-
+/* забрав */
 .hero-title {
   max-width: 696px;
   margin: 0 auto 30px;
@@ -260,23 +267,26 @@ body {
   text-transform: uppercase;
   color: var(--color-white);
 }
-
+/* забрав */
 .hero-btn {
   padding: 10px 32px;
 }
 
 /* Benefits */
-
+/* забрав */
 .benefits-list {
   display: flex;
   flex-wrap: wrap;
 }
+/* забрав */
 .benefits-item {
   flex-basis: calc((100% - 90px) / 4);
 }
+/* забрав */
 .benefits-item:not(:last-child) {
   margin-right: 30px;
 }
+/* забрав */
 .benefits-img {
   display: flex;
   justify-content: center;
@@ -285,6 +295,7 @@ body {
   margin-bottom: 30px;
   background-color: var(--color-bgr-grey);
 }
+/* забрав */
 .benefits-subtitle {
   margin-bottom: 10px;
   line-height: calc(16 / 14);
