--- a/sass/common-classes/_common-classes.scss
+++ b/sass/common-classes/_common-classes.scss
@@ -29,3 +29,17 @@
     padding: 0 15px;
     width: 1200px;
   }
+
+  .section {
+    padding: 94px 0;
+    &__title {
+      margin-bottom: 50px;
+
+      font-size: 36px;
+      line-height: calc(42 / 36);
+      text-align: center;
+      color: $textColorBold;
+    }
+  }
+  
+  
