--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,5 @@
 
 @import 'main-page/main/hero/hero';
 @import 'main-page/main/benefits/benefits';
+@import 'main-page/main/works/works';
+@import 'main-page/main/team/_team.sccs';
