--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,4 +9,5 @@
 @import 'main-page/main/hero/hero';
 @import 'main-page/main/benefits/benefits';
 @import 'main-page/main/works/works';
-@import 'main-page/main/team/_team.sccs';
+@import 'main-page/main/team/team';
+@import 'main-page/main/clients/clients';
