--- a/css/main.css
+++ b/css/main.css
@@ -64,7 +64,7 @@ button {
   background-color: #2196f3;
 }
 
-.works__img {
+.team__img, .works__img {
   display: block;
   width: 100%;
 }
@@ -173,10 +173,6 @@ button {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.navigation__link:hover, .navigation__link:focus {
-  color: #2196f3;
-}
-
 .contact-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -204,9 +200,6 @@ button {
   padding-top: 32px;
   padding-bottom: 32px;
   color: inherit;
-}
-.contact-header__link:hover, .contact-header__link:focus {
-  color: #2196f3;
 }
 .contact-header__icon {
   margin-right: 10px;
@@ -305,5 +298,138 @@ button {
       flex-basis: calc((100% - 60px) / 3);
 }
 .works__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.team {
+  background-color: #f5f4fa;
+}
+.team__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.team__content {
+  background-color: #ffffff;
+  padding: 30px;
+  text-align: center;
+  white-space: nowrap;
+  border-radius: 0px 0px 4px 4px;
+}
+.team__subtitle {
+  margin-bottom: 10px;
+  font-size: 16px;
+  line-height: 1.1875;
+  font-weight: 500;
+  color: #212121;
+}
+.team__description {
+  margin-bottom: 16px;
+  font-size: 16px;
+  line-height: 1.1875;
+}
+.team__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.team__link {
+  width: 44px;
+  height: 44px;
+}
+
+.team__item {
+  -ms-flex-preferred-size: calc((100% - 90px) / 4);
+      flex-basis: calc((100% - 90px) / 4);
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.team__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.link-team:not(:last-child) {
+  margin-right: 10px;
+}
+.link-team__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: #afb1b8;
+  border-radius: 50%;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.link-team__item:hover, .link-team__item:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+}
+.link-team__vector {
+  fill: currentColor;
+}
+
+.clients__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.clients__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: #afb1b8;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #afb1b8;
+  border-radius: 4px;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.clients__link:hover, .clients__link:focus {
+  color: #2196f3;
+  border-color: #2196f3;
+}
+.clients__vector {
+  fill: currentColor;
+}
+
+.clients__item {
+  width: 170px;
+  height: 92px;
+}
+.clients__item:not(:last-child) {
   margin-right: 30px;
 }/*# sourceMappingURL=main.css.map */
