--- a/css/main.css
+++ b/css/main.css
@@ -173,6 +173,10 @@ button {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.navigation__link:hover, .navigation__link:focus {
+  color: #2196f3;
+}
+
 .contact-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -200,6 +204,9 @@ button {
   padding-top: 32px;
   padding-bottom: 32px;
   color: inherit;
+}
+.contact-header__link:hover, .contact-header__link:focus {
+  color: #2196f3;
 }
 .contact-header__icon {
   margin-right: 10px;
