--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,5 @@
 @import 'main-page/main/works/works';
 @import 'main-page/main/team/team';
 @import 'main-page/main/clients/clients';
+
+@import 'main-page/footer/address/address';
