--- a/sass/main-page/main/team/_team.scss
+++ b/sass/main-page/main/team/_team.scss
@@ -56,17 +56,12 @@
         color:$colorIcon;
         border-radius: 50%;
 
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        &:hover,
-        &:focus {
-        color: #ffffff;
-        background-color: $bgColorAccent;
-    }
+        @include hover-icon();
+
 
         
     }
     &__vector {
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         fill: currentColor;
         
     }
