--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -24,15 +24,14 @@ $bgColorDarkGrey: #2f303a;
     color: $color;
     }
 }
-// @mixin hover-icon ($color:#ffffff,$background:$bgColorAccent) {
-//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//     &:hover,
-//     &:focus {
-//         color: $color;
-//         background-color: $background;
-//     }
-// }
+@mixin hover-icon ($color:#ffffff,$background:$bgColorAccent) {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        color: $color;
+        background-color: $background;
+    }
+}
 @mixin hover-clietns ($color:$textColorAccent,$border:$bgColorAccent) {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
