--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,7 @@
 @import 'main-page/main/clients/clients';
 
 @import 'main-page/footer/address/address';
+@import 'main-page/footer/footer-links/footer-links';
+@import 'main-page/footer/footer-form/footer-form';
+
+@import 'main-page/modal-page/modal-form/modal-form';
