--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ button {
   line-height: 1.1923076923;
 }
 
-.hero__btn {
+.modal-form__btn, .footer-form__btn, .hero__btn {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
@@ -483,4 +483,159 @@ button {
 }
 .address__item:nth-child(n+2) {
   opacity: 0.6;
+}
+
+.footer-links__appeal {
+  display: inline-block;
+  margin-bottom: 20px;
+  line-height: 1.7142857143;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.footer-links__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.footer-links__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #ffffff;
+  border-radius: 50%;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-links__link:hover, .footer-links__link:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+}
+.footer-links__vector {
+  fill: currentColor;
+}
+
+.footer-links__item {
+  width: 44px;
+  height: 44px;
+}
+.footer-links__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.footer-form {
+  margin-left: auto;
+}
+.footer-form__label {
+  display: block;
+  margin-bottom: 20px;
+  font-weight: 700;
+  line-height: 1.1428571429;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.footer-form__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 12px;
+}
+.footer-form__input {
+  min-width: 358px;
+  padding: 15px 16px;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #ffffff;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+.footer-form__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 10px;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  padding: 10px 28px;
+  border: 1px solid #2196f3;
+}
+.modal-page {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.2);
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 528px;
+  padding: 40px 39px 40px 41px;
+  text-align: center;
+  background-color: #ffffff;
+}
+.modal-form__close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form__close-btn:hover, .modal-form__close-btn:focus {
+  color: #2196f3;
+}
+.modal-form__close-vector {
+  fill: currentColor;
+  background-color: transparent;
+}
+.modal-form__title {
+  margin-bottom: 30px;
+  font-size: 20px;
+  line-height: 1.15;
+  color: #212121;
+}
+.modal-form__btn {
+  padding: 10px 52px;
 }/*# sourceMappingURL=main.css.map */
