--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -10,6 +10,8 @@ $bgColorAccent:#2196f3;
 $bgColorGrey: #f5f4fa;
 $bgColorDarkGrey: #2f303a;
 
+$basicCubic: cubic-bezier(0.4, 0, 0.2, 1);
+
 
 
 
@@ -18,14 +20,14 @@ $bgColorDarkGrey: #2f303a;
 // Міксіни
 
 @mixin hover-accent ($color:$textColorAccent) {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms $basicCubic;
     &:hover,
     &:focus {
     color: $color;
     }
 }
 @mixin hover-icon ($color:#ffffff,$background:$bgColorAccent) {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms $basicCubic, background-color 250ms $basicCubic;
     &:hover,
     &:focus {
         color: $color;
@@ -33,8 +35,8 @@ $bgColorDarkGrey: #2f303a;
     }
 }
 @mixin hover-clietns ($color:$textColorAccent,$border:$bgColorAccent) {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms $basicCubic;
+    transition: background-color 250ms $basicCubic;
 &:hover,
 &:focus {
     color: $color;
