--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,6 @@
 @import 'main-page/footer/footer-form/footer-form';
 
 @import 'main-page/modal-page/modal-form/modal-form';
+@import 'main-page/modal-page/form-field/form-field';
+@import 'main-page/modal-page/form-field-textarea/form-field-textarea';
+@import 'main-page/modal-page/checkbox/checkbox';
