--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -98,3 +98,21 @@ width: 100%;
     visibility: hidden;
     pointer-events: none;
 }
+
+.active {
+    color: $textColorAccent;
+    &::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+  
+    display: block;
+    height: 4px;
+    width: 100%;
+  
+    border-radius: 2px;
+    background-color: $bgColorAccent;
+  }
+}
+
+
