--- a/sass/components/main-page/header/navigation/_navigation.scss
+++ b/sass/components/main-page/header/navigation/_navigation.scss
@@ -17,7 +17,21 @@
     color: $textColorBold;
     
     @include hover-accent();
+    }
+}
+.active {
+  color: $textColorAccent;
+  &::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
 
-  }
+  display: block;
+  height: 4px;
+  width: 100%;
+
+  border-radius: 2px;
+  background-color: $bgColorAccent;
+}
 }
 
