--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,27 +1,33 @@
-@import 'utils/null';
+@import 'utils/extends';
+@import 'utils/mixins';
 @import 'utils/variables';
-@import 'components/common-classes/common-classes';
 
+@import 'base/common';
+@import 'base/reset';
 
-@import 'components/main-page/header/header-contact/header-contact';
-@import 'components/main-page/header/navigation/navigation';
-@import 'components/main-page/header/header-logo/header-logo';
+@import 'components/conteiner';
+@import 'components/section';
+@import 'components/is-hidden';
+@import 'components/visulally-hidden';
 
-@import 'components/main-page/main/hero/hero';
-@import 'components/main-page/main/benefits/benefits';
-@import 'components/main-page/main/works/works';
-@import 'components/main-page/main/team/team';
-@import 'components/main-page/main/clients/clients';
+@import 'layouts/header-logo';
+@import 'layouts/header-navigation';
+@import 'layouts/header-contact';
 
-@import 'components/main-page/footer/address/address';
-@import 'components/main-page/footer/footer-links/footer-links';
-@import 'components/main-page/footer/footer-form/footer-form';
+@import 'layouts/main-hero';
+@import 'layouts/main-benefits';
+@import 'layouts/main-works';
+@import 'layouts/main-team';
+@import 'layouts/main-clients';
 
-@import 'components/main-page/modal-page/modal-form/modal-form';
-@import 'components/main-page/modal-page/form-field/form-field';
-@import 'components/main-page/modal-page/form-field-textarea/form-field-textarea';
-@import 'components/main-page/modal-page/checkbox/checkbox';
+@import 'layouts/portfolio-filter';
+@import 'layouts/portfolio-gallery';
 
+@import 'layouts/footer-address';
+@import 'layouts/footer-links';
+@import 'layouts/footer-form';
 
-@import 'components/portfolio-page/main/portfolio-filter/portfolio-filter';
-@import 'components/portfolio-page/main/gallery/gallery';
+@import 'layouts/modal-form';
+@import 'layouts/modal-form-field';
+@import 'layouts/modal-textarea';
+@import 'layouts/modal-checkbox';
